# Algorithm

./: .gitignore  README.md  pyproject.toml  update_stats.py
Algorithm Note/: DFS_BFS.ipynb  DFS_BFS.py  image_generation.ipynb
baekjoon/: test.py
baekjoon/19_재귀/: 10870_피보나치 수 5.py  27433_팩토리얼 2.py  4779_칸토어 집합.py
baekjoon/DFS+BFS 필수 문제/: 1260_DFS와 BFS.py
inflearn_2week_algorithm/: problem1.py
inflearn_2week_algorithm/2. BruteForce/: 1. 비밀번호(#1816).py  1090_체커.py  14568_2017 연세대학교 프로그래밍 경시대회.py  1816_암호 키.py  19532_수학은 비대면강의입니다.py  2. 사탕(#14568).py  2503_숫자 야구.py  3. 연립방정식(#19532).py  4. 숫자야구(#2503).py  5. 모이기(#1090).py  test.py
inflearn_2week_algorithm/3. Optimization (number theory)/: 11653_소인수분해.py  1407_2로 몇 번 나누어질까.py  14232_보석 도둑.py  15736_청기 백기.py  1978_소수 찾기.py
inflearn_2week_algorithm/4. PrefixSum/: 11660_구간 합 구하기 5.py  14719_빗물.py  17611_직각다각형.py  1912_연속합.py  2304_창고 다각형.py  2559_수열.py  3020_개똥벌레.py
inflearn_2week_algorithm/5. Recursion, Backtracking/: 15649_N과 M (1).py  15650_N과 M (2)  15651_N과 M (3).py  15652_N과 M (4).py  15654_N과 M (5).py  15655_N과 M (6).py  15656_N과 M (7).py
inflearn_2week_algorithm/6. Optimization (recursion, backtracking)/: 12865_평범한 배낭.py  14501_퇴사.py  19942_다이어트.py  2961_ 도영이가 만든 맛있는 음식.py
백준/Gold/14719. 빗물/: README.md  (+1 more)
백준_local/: _에라토스테네스의 체.py  test.py
백준_local/19_재귀/: 11729_하노이 탑 이동 순서.py  2447_별 찍기 - 10.py  25501_재귀의 귀재.py  4779_칸토어 집합.py
이것이 취업을 위한 코딩테스트다/: ~$예제_4-2_시각.xlsx  실전_3-2_큰 수의 법칙.py  실전_3-3_숫자 카드 게임.py  실전_4-2_왕실의 나이트.py  실전_4-3_게임 개발.py  예제_3-1_거스름돈.py  예제_4-1_상하좌우.py  예제_4-2_시각.py  예제_4-2_시각.xlsx
(+267 files in other folders)
