[project]
name = "algorithm"
version = "0.1.0"
description = "Algorithm practice"
authors = [
    {name = "Jitae Choi"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib",
    "networkx"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"